fix icon visibility and e2e tests (#465)

--- a/src/app/individual/individual-detail/individual-observation-view/individual-observation-view.component.scss
+++ b/src/app/individual/individual-detail/individual-observation-view/individual-observation-view.component.scss
@@ -5,10 +5,6 @@
 .individual-observation-view {
   margin-top: 2.5625rem;
 
-  .mat-icon {
-    overflow: visible;
-  }
-
   &__label {
     @include detail-label;
   }
