--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,3 +116,7 @@ snack-bar-container.error {
 #phaenonet-body .no-margin-top {
   margin-top: 0;
 }
+
+.mat-icon {
+  overflow: visible !important;
+}
